2004-08-19  Werner Koch  <wk@g10code.de>

	* pubkey.c (sexp_data_to_mpi): Changed the zero random byte
	substituting code to actually do clever things.  Thanks to
	Matthias Urlichs for noting the implementation problem.

2004-08-09  Moritz Schulte  <moritz@g10code.com>

	* pubkey.c (gcry_pk_sign): Fixed memory leak; fix provided by
	Modestas Vainius.

2004-07-16  Werner Koch  <wk@gnupg.org>

	* rijndael.c (do_encrypt): Fix alignment problem.  Bugs found by
	Matthias Urlichs.
	(do_decrypt): Ditto.
	(keySched, keySched2): Use 2 macros along with unions in the key
	schedule context.

2004-07-14  Moritz Schulte  <moritz@g10code.com>

	* rsa.c (_gcry_rsa_decrypt): Don't forget to free "a".  Thanks to
	Nikos Mavroyanopoulos.

2004-05-09  Werner Koch  <wk@gnupg.org>

	* random.c (read_pool): Mix the PID in to better protect after a
	fork.

2004-07-04  Moritz Schulte  <moritz@g10code.com>

	* serpent.c: Use "u32_t" instead of "unsigned long", do not
	declare S-Box variables as "register".  Fixes failure on
	OpenBSD/sparc64, reported by Nikolay Sturm.

2004-05-07  Werner Koch  <wk@gnupg.org>

	* random.c (initialize): Factored out some code to ..
	(initialize_basics): .. new function.
	(_gcry_random_initialize): Just call initialize_basics unless the
	new arg FULL is set to TRUE.
	(_gcry_fast_random_poll): Don't do anything unless the random
	system has been really initialized.

2004-05-07  Moritz Schulte  <moritz@g10code.de>

	* ac.c (gcry_ac_open): Do not dereference NULL pointer.  Reported
	by Umberto Salsi.

2004-02-20  Werner Koch  <wk@gnupg.org>

	* primegen.c (check_prime): New args CB_FUNC and CB_ARG; call them
	at different stages.  Pass these arguments through all callers.

2004-02-06  Werner Koch  <wk@gnupg.org>

	* des.c: Add a new OID as used by pkcs#12.

	* rfc2268.c: New. Taken from libgcrypt. 
	* cipher.c: Setup the rfc2268 algorithm.

2004-01-25  Moritz Schulte  <mo@g10code.com>

	* primegen.c (prime_generate_internal): Do not forget to free