@@ -1,3 +1,9 @@
+2004-09-15  Werner Koch  <wk@g10code.de>
+
+	* global.c (gcry_control): Adjusted random into call for the
+	changed API in random.c.  Seemed we never compiled the entire
+	thing since May.
+
 2004-08-22  Moritz Schulte  <moritz@g10code.com>
 
 	* secmem.c (_gcry_secmem_init): Try to lock pool into core not
