@@ -1,3 +1,11 @@
+2004-09-15  Werner Koch  <wk@g10code.de>
+
+	* random.c (read_pool): Fixed dropping of the volatile warning when
+	passing MY_PID to add_random.
+
+	* pubkey.c (sexp_data_to_mpi): Fixed syntax error. Aiih committing
+	changes without compiling is a real brown paper bag bug.
+
 2004-08-19  Werner Koch  <wk@g10code.de>
 
 	* pubkey.c (sexp_data_to_mpi): Changed the zero random byte
